--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-  "engines":{
+  "engines": {
     "node": "~5.5.0",
     "npm": "~3.7.3"
   },
@@ -15,6 +15,7 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mongoose": "^4.4.4",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
